--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,8 @@
         android:layout_height="match_parent"
         tools:listitem = "@layout/single_note"/>
 
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="" />
+
 </android.support.design.widget.CoordinatorLayout>
