--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,11 @@
         tools:listitem = "@layout/single_note"/>
 
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/addNoteFab"
         android:layout_width="wrap_content"
-        android:layout_height="" />
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_addnote"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="20dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
