--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -21,11 +21,19 @@
         android:hint="Description"
         android:layout_margin="10dp"/>
 
-    <NumberPicker
-        android:id="@+id/numPickerPriority"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="Priority: "
+        android:textColor="@android:color/black"
         android:layout_margin="10dp"/>
+
+    <NumberPicker
+        android:id="@+id/numPickerPriority"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="10dp" />
 
     <Button
         android:id="@+id/btnSave"
@@ -34,6 +42,7 @@
         android:layout_gravity="center"
         android:background="@color/colorPrimary"
         android:text="Save"
+        android:layout_margin="20dp"
         android:textColor="@android:color/white"/>
 
 </LinearLayout>
