--- a/app/src/main/res/layout/single_note.xml
+++ b/app/src/main/res/layout/single_note.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp">
+    android:layout_marginTop="8dp"
+    android:id="@+id/card_view_note">
 
     <RelativeLayout
         android:layout_width="wrap_content"
